fixed missing space between rectangles buttons in the commandlist

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -857,6 +857,11 @@ section .section-title {
     border-radius: 10px !important;
 }
 
+.documentation-button {
+    margin-top: 7px;
+    margin-right: 5px;
+}
+
 /*Handy S*/
 
 @media only screen and (min-width: 320px) and (max-width: 374px) {
